--- a/src/pages/Form/Form.css
+++ b/src/pages/Form/Form.css
@@ -1,31 +1,34 @@
-.App {
+.form-frame{
   display: flex;
+  flex-direction: column;
+  width: 27rem;
+}
+.submitButton {
+  background-color: #145C99;
   text-align: center;
   justify-content: center;
-
 }
+.form-input-lable{
+  font-size: 14px;
+  color: #5D7181;
+  margin: 0.5rem 1.5rem -0.5rem 1.5rem
 
-.App-header {
-  background-color: #2FC96E;
-  /* width: 27rem; */
-  margin-top: 1rem;
-  padding:  0rem 1.3rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: rgb(13, 2, 78);
-  border-radius: 25px;
+}  
+
+.input-box{
+border-radius: 5px;
+border: #5D7181 solid 1px;
+padding: 1rem;
+/* margin-bottom: 1rem; */
+font-size: 1rem;
+font-weight: 500;
+margin: 1rem 1.5rem
 }
-
-.form-frame {
-  background-color: red;
-  width: 50%;
-  height: 50%;
-
+.input-error{
+  border-radius: 12px;
+  border: red solid 1px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  font-weight: 500;
 }
-
-
